Closed lists window for volunteers - changing the function in BO works except for , needs to be fixed: that the name of what we selected appears on the button and put colors for the backgrounds of each of them

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -13,6 +13,8 @@
         <local:DistanceTypeEnumToBackgroundConverter x:Key="DistanceTypeEnumToBackgroundConverterKey" />
         <local:RoleEnumToStringConverter x:Key="RoleEnumToStringConverterKey"/>
         <local:PasswordConverter x:Key="PasswordConverterKey" />
+        <local:Calltype x:Key="CalltypeKey" />
+        <local:ClosedCallInListEnum x:Key="ClosedCallInListEnumKey" />
 
 
 
