--- a/PL/main volunteer/ChooseCallWindow.xaml
+++ b/PL/main volunteer/ChooseCallWindow.xaml
@@ -1,12 +1,117 @@
 ﻿<Window x:Class="PL.main_volunteer.ChooseCallWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PL.main_volunteer"
-        mc:Ignorable="d"
-        Title="ChooseCallWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Choose Call for Volunteer" Height="600" Width="1000">
+    <DockPanel>
+        <TextBlock DockPanel.Dock="Top" Text="Choose Call for Volunteer"
+                   FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
+
+        <!-- Displaying Volunteer Information -->
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10" Width="698">
+            <TextBlock Text="Volunteer Current Address:" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Text="{Binding Volunteer.Address}" VerticalAlignment="Center" Margin="5"/>
+            <TextBlock Text="Distance from Volunteer (km):" VerticalAlignment="Center" Margin="5" RenderTransformOrigin="0.782,0.717" Width="163"/>
+            <TextBlock Text="{Binding Volunteer.Distance}" VerticalAlignment="Center" Margin="5"/>
+        </StackPanel>
+
+        <!-- Filter and Sort Controls -->
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+            <TextBlock Text="Filter by Distance (km):" VerticalAlignment="Center" Margin="5"/>
+            <TextBox Width="80" Margin="0,0,20,0" VerticalAlignment="Center"/>
+
+            <Button Content="Filter" Width="100" Click="FilterCalls" VerticalAlignment="Center"/>
+
+            <TextBlock Text="Sort by:" VerticalAlignment="Center" Margin="10"/>
+            <ComboBox Width="150" Margin="0,0,10,0" VerticalAlignment="Center">
+                <ComboBoxItem Content="Distance"/>
+                <ComboBoxItem Content="Description"/>
+                <ComboBoxItem Content="Opening Time"/>
+            </ComboBox>
+
+            <Button Content="Sort" Width="100" Click="SortCalls" VerticalAlignment="Center"/>
+        </StackPanel>
+
+        <!-- Calls List -->
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <!-- Column Definitions -->
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="140"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Column Headers -->
+                <Border Grid.Column="0" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Margin="10,0,0,408" Grid.RowSpan="2">
+                    <TextBlock Text="ID" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="1" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Call Type" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="2" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Description" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="3" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Address" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="4" Grid.Row="0" BorderBrush="Black" BorderThickness="1">
+                    <TextBlock Text="Opening Time" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+                <Border Grid.Column="5" Grid.Row="0" BorderBrush="Black" BorderThickness="1" Margin="0,0,10,408" Grid.RowSpan="2">
+                    <TextBlock Text="Distance" FontWeight="ExtraBold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                </Border>
+
+                <!-- Calls Data -->
+                <ItemsControl Grid.Row="1" Grid.ColumnSpan="6" ItemsSource="{Binding CallsList}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="160"/>
+                                    <ColumnDefinition Width="160"/>
+                                    <ColumnDefinition Width="140"/>
+                                </Grid.ColumnDefinitions>
+
+                                <!-- Call Data Fields -->
+                                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding Id}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
+                                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding CallType}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
+                                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding Address}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
+                                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding OpeningTime}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
+                                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1">
+                                    <TextBlock Text="{Binding DistanceFromVolunteer}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                                </Border>
+
+                                <!-- Select Button -->
+                                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1">
+                                    <Button Content="Select" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SelectCallButton_Click"/>
+                                </Border>
+
+                                <!-- Description TextBlock -->
+                                <TextBlock Name="DescriptionTextBlock" Grid.Row="2" Grid.ColumnSpan="6" Text="{Binding Description}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5" Visibility="Collapsed"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </Grid>
+        </ScrollViewer>
+    </DockPanel>
 </Window>
